Tag picker: fix for overflowing long tags

--- a/packages/office-ui-fabric-react/src/components/pickers/TagPicker/TagItem.scss
+++ b/packages/office-ui-fabric-react/src/components/pickers/TagPicker/TagItem.scss
@@ -53,5 +53,4 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    width: 130px;
 }
